log
Fri Mar 18 14:24:09 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:38: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   List * new = (List *)malloc(sizeof(list));
                                      ^~~~
                                      List
list.c:33:38: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:10: error: unused variable ‘new’ [-Werror=unused-variable]
   List * new = (List *)malloc(sizeof(list));
          ^~~
cc1: all warnings being treated as errors
Compilation failed
0a1bbfb
Fri Mar 18 14:24:46 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:10: error: unused variable ‘new’ [-Werror=unused-variable]
   List * new = (List *)malloc(sizeof(List));
          ^~~
cc1: all warnings being treated as errors
Compilation failed
275f154
Fri Mar 18 14:25:02 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:10: error: unused variable ‘nueva’ [-Werror=unused-variable]
   List * nueva = (List *)malloc(sizeof(List));
          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
5691075
Fri Mar 18 14:33:14 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
574c3b4
Fri Mar 18 14:36:38 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:41:10: error: ‘nueva’ undeclared (first use in this function)
   return nueva->head;
          ^~~~~
list.c:41:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
e9b386a
Fri Mar 18 14:37:27 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:3: error: ‘nueva’ undeclared (first use in this function)
   nueva->head;
   ^~~~~
list.c:40:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
afe43dd
Fri Mar 18 14:40:42 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:7: error: ‘List {aka struct List}’ has no member named ‘nueva’
   list->nueva->head;
       ^~
list.c:41:15: error: ‘List {aka struct List}’ has no member named ‘nueva’
    return list->nueva;
               ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
c03e4bc
Fri Mar 18 14:41:35 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:7: error: ‘List {aka struct List}’ has no member named ‘nueva’
   list->nueva->head;
       ^~
list.c:41:15: error: ‘List {aka struct List}’ has no member named ‘nueva’
    return list->nueva->head;
               ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
1921080
